[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/NameConfirmTab.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.0784314, 0.0941176, 0.113725, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="NameConfirmTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="MainSplit" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 120.0
offset_right = -80.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryPanel" type="PanelContainer" parent="MainSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="MainSplit/SummaryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryBox" type="VBoxContainer" parent="MainSplit/SummaryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RaceSummary" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Race: Human"

[node name="ClassSummary" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Class: Fighter"

[node name="BackgroundSummary" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Background: Soldier"

[node name="AbilitiesSummary" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Abilities:"

[node name="AbilitiesGrid" type="GridContainer" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="STRLabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "STR: "

[node name="STRValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "15 (+2)"

[node name="DEXLabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "DEX: "

[node name="DEXValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "14 (+2)"

[node name="CONLabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CON: "

[node name="CONValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "13 (+1)"

[node name="INTLabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "INT: "

[node name="INTValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "12 (+1)"

[node name="WISLabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "WIS: "

[node name="WISValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "10 (+0)"

[node name="CHALabel" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CHA: "

[node name="CHAValue" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox/AbilitiesGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "8 (-1)"

[node name="AppearanceSummary" type="Label" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Appearance:"

[node name="AppearanceDetails" type="RichTextLabel" parent="MainSplit/SummaryPanel/MarginContainer/SummaryBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Head: Head01\nHair: Hair01\nSkin: White"

[node name="RightColumn" type="VBoxContainer" parent="MainSplit"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)
theme_override_constants/separation = 30

[node name="NameTitleMargin" type="MarginContainer" parent="MainSplit/RightColumn"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="NameTitle" type="Label" parent="MainSplit/RightColumn/NameTitleMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "NAME YOUR CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEntry" type="LineEdit" parent="MainSplit/RightColumn"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 40
placeholder_text = "Enter Name"

[node name="VoiceTitle" type="Label" parent="MainSplit/RightColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "CHOOSE VOICE"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainSplit/RightColumn"]
layout_mode = 2
custom_minimum_size = Vector2(0, 400)
size_flags_vertical = 3

[node name="VoiceGrid" type="GridContainer" parent="MainSplit/RightColumn/ScrollContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ConfirmButton" type="Button" parent="MainSplit/RightColumn"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
disabled = true
text = "CONFIRM AND START ADVENTURE"
